[package]
name = "owasp-headers"
version = "0.1.1"
authors = ["Ron Waldon <jokeyrhyme@jokeyrhy.me>"]
edition = "2021"
description = "best-practice OWASP HTTP response headers ( https://owasp.org/www-project-secure-headers/ ) for Rust"
readme = "README.md"
homepage = "https://gitlab.com/jokeyrhyme/owasp-headers-rs"
repository = "https://gitlab.com/jokeyrhyme/owasp-headers-rs.git"
license = "MIT"
keywords = ["best-practice", "http", "headers", "owasp", "security"]
categories = ["web-programming", "web-programming::http-server"]
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
http = "0.2"

[dev-dependencies]
toml = "0.5"

[profile.release]
codegen-units = 1
lto = "fat"

