[package]
name = "owasp-headers"
version = "0.1.2"
authors = ["Ron Waldon <jokeyrhyme@jokeyrhy.me>"]
edition = "2021"
description = "best-practice OWASP HTTP response headers ( https://owasp.org/www-project-secure-headers/ ) for Rust"
readme = "README.md"
homepage = "https://gitlab.com/jokeyrhyme/owasp-headers-rs"
repository = "https://gitlab.com/jokeyrhyme/owasp-headers-rs.git"
license = "MIT"
keywords = ["best-practice", "http", "headers", "owasp", "security"]
categories = ["web-programming", "web-programming::http-server"]
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]
http = "1.1.0"

[dev-dependencies]
axum = "0.7"
hyper = "1.2.0"
toml = "0.5"

[profile.release]
codegen-units = 1
lto = "fat"

